--- a/vars/all.yml
+++ b/vars/all.yml
@@ -13,6 +13,20 @@ satellite_deployment_admin_password: redhat123
 satellite_lifecycle: [NonProd, PreProd, Prod]
 satellite_content_view: CV-Comp
 satellite_deployment_server: "https://rhsatellite.example.org"
+satellite_kat_cert: "katello-ca-consumer-latest.noarch.rpm"
+#satellite_base_url: "rhsatpool1.prod.cba"
+sat_activation_key: "ak-rhel8-nonprod"
+yum_repo_dir: "/etc/yum.repos.d"
+satellite_content_view_version_cleanup_keep: 0
+errata_end_date: "2025-02-05"
+
+# Variables for satellite_upload role
+satellite_product: "AWS"
+satellite_repository: "aws-cloudwatch-repo"
+package_url: "https://amazoncloudwatch-agent.s3.amazonaws.com/amazon_linux/amd64/latest/{{ package_name }}"
+package_tmp: "/tmp"
+package_name: "amazon-cloudwatch-agent.rpm"
+#Variables for cluster_update role
 fence_resource_name: "fence_resource"
 hana_pcs_resource: "sap_hana-clone"
 ha_system_services_list:
@@ -22,4 +36,5 @@ ha_system_services_list:
 system_services_list:
       - pacemaker
       - corosync
+# Variables for server_restore role
 instance_id: "i-06f2ae9866ae9448b"  # Replace with your instance ID
