--- a/server_update/tasks/main.yml
+++ b/server_update/tasks/main.yml
@@ -141,6 +141,7 @@
     resource: "{{ instance_id }}"
     region: "{{ aws_region }}"
     tags: "{{ { backup_tag_key: backup_tag_value } }}"
+    state: present
   delegate_to: localhost
 
 - name: Get current instance tags
@@ -150,14 +151,27 @@
   register: instance_info
   delegate_to: localhost
 
-- name: Extract tags starting with Server_update_ and build a dictionary
+- name: Extract Server_update_* tags as a sorted list (latest first)
   ansible.builtin.set_fact:
-    cleanup_tags: >-
-       {{ instance_info.instances[0].tags | dict2items
-          | selectattr('key', 'match', '^Server_update_')
-          | items2dict }}
+    server_update_tags: >-
+      {{
+         instance_info.instances[0].tags
+         | dict2items
+         | selectattr('key', 'match', '^Server_update_')
+         | sort(attribute='key', reverse=true)
+         | list
+      }}
 
-- name: Remove old Server_update_* tags
+- name: Determine keys to keep (the two latest tags)
+  ansible.builtin.set_fact:
+    keep_keys: "{{ (server_update_tags | map(attribute='key') | list)[0:2] }}"
+
+- name: Build a dictionary of old tags to remove (all except the two we keep)
+  ansible.builtin.set_fact:
+    cleanup_tags: "{{ cleanup_tags | default({}) | combine({ item.key: item.value }) }}"
+  loop: "{{ server_update_tags | rejectattr('key', 'in', keep_keys) | list }}"
+
+- name: Remove old Server_update_* tags (leaving the two latest)
   amazon.aws.ec2_tag:
     resource: "{{ instance_id }}"
     region: "{{ aws_region }}"
