--- a/site.yml
+++ b/site.yml
@@ -18,14 +18,15 @@
     - role: satellite_upload
       tags:
         - satellite_upload
+    - role: server_restore
+      tags:
+        - server_restore
 
 - name: Restore Server from the Snapshot
   hosts: localhost
   gather_facts: false
+  become: true
   roles:
-    - role: server_restore
-      tags:
-        - server_restore
     - role: satellite_content_view
       tags:
         - satellite_content_view
