--- a/server_restore/tasks/main.yml
+++ b/server_restore/tasks/main.yml
@@ -77,6 +77,7 @@
       volume-id: "{{ old_root_volume_id }}"
       status: "completed"
   register: volume_snapshots
+  delegate_to: localhost
 
 - name: Fail if no snapshots exist
   ansible.builtin.fail:
@@ -97,6 +98,7 @@
     region: "{{ aws_region }}"
     instance_ids: "{{ instance_id }}"
     state: stopped
+  delegate_to: localhost
 
 - name: Wait for instance to stop
   amazon.aws.ec2_instance_info:
@@ -106,6 +108,7 @@
   until: instance_status.instances[0].state.name == "stopped"
   retries: 10
   delay: 10
+  delegate_to: localhost
 
 - name: Create new volume from the latest snapshot
   amazon.aws.ec2_vol:
@@ -114,6 +117,7 @@
     availability_zone: "{{ availability_zone }}"
     volume_type: "gp3"
   register: new_volume
+  delegate_to: localhost
 
 - name: Wait for new volume to be available
   amazon.aws.ec2_vol_info:
@@ -124,6 +128,7 @@
   until: new_volume_status.volumes[0].status == "available"
   retries: 10
   delay: 5
+  delegate_to: localhost
 
 - name: Detach old root volume
   amazon.aws.ec2_vol:
@@ -131,6 +136,7 @@
     id: "{{ old_root_volume_id }}"
     instance: "{{ instance_id }}"
     state: absent
+  delegate_to: localhost
 
 - name: Attach new volume
   amazon.aws.ec2_vol:
@@ -138,12 +144,14 @@
     instance: "{{ instance_id }}"
     id: "{{ new_volume.volume_id }}"
     device_name: "{{ device_name }}"
+  delegate_to: localhost
 
 - name: Start the instance
   amazon.aws.ec2_instance:
     region: "{{ aws_region }}"
     instance_ids: "{{ instance_id }}"
     state: running
+  delegate_to: localhost
 
 - name: Wait for instance to run
   amazon.aws.ec2_instance_info:
@@ -153,7 +161,8 @@
   until: instance_status.instances[0].state.name == "running"
   retries: 10
   delay: 10
-
+  delegate_to: localhost
+  
 - name: Print recovery status
   ansible.builtin.debug:
     msg: "Instance {{ instance_id }} is running with restored volume {{ new_volume.volume_id }} (from snapshot {{ snapshot_id }})"
