--- a/tests/playbook-meta-info.yml
+++ b/tests/playbook-meta-info.yml
@@ -15,14 +15,19 @@
       method: GET
     register: identity_doc
 
+  - name: Show
+    debug: 
+      var: identity_doc
+
   - name: Set region and instance_id
     ansible.builtin.set_fact:
       aws_region: "{{ (identity_doc.content | from_json).region }}"
       instance_id: "{{ (identity_doc.content | from_json).instanceId }}"
+      availability_zone: "{{ (identity_doc.content | from_json).availabilityZone }}"
 
   - name: Show
     debug: 
-      var: aws_region
+      var: availability_zone
 
   - name: Show
     debug: 
