--- a/server_restore/tasks/main.yml
+++ b/server_restore/tasks/main.yml
@@ -40,7 +40,8 @@
   ansible.builtin.set_fact:
     aws_region: "{{ (identity_doc.content | from_json).region }}"
     instance_id: "{{ (identity_doc.content | from_json).instanceId }}"
-
+    availability_zone: "{{ (identity_doc.content | from_json).availabilityZone }}"
+    
 ########################################################################
 # 2) Gather volume IDs attached to this instance
 ########################################################################
@@ -162,7 +163,7 @@
   retries: 10
   delay: 10
   delegate_to: localhost
-  
+
 - name: Print recovery status
   ansible.builtin.debug:
     msg: "Instance {{ instance_id }} is running with restored volume {{ new_volume.volume_id }} (from snapshot {{ snapshot_id }})"
