--- a/server_restore/tasks/main.yml
+++ b/server_restore/tasks/main.yml
@@ -1,33 +1,10 @@
 ---
 # tasks file for server_restore
 - name: Include role variables
-  ansible.builtin.include_vars: "vars/all.yml"
-
-# # Get instance metadata
-# - name: Get instance details
-#   amazon.aws.ec2_instance_info:
-#     region: "{{ aws_region | default(omit) }}"  # Region will be dynamically set later
-#     instance_ids: "{{ instance_id }}"
-#   register: instance_info
-
-# # Extract facts from instance metadata
-# - name: Extract dynamic facts (AZ, region, device name)
-#   block:
-#     - name: Extract Availability Zone
-#       ansible.builtin.set_fact:
-#         availability_zone: "{{ instance_info.instances[0].placement.availability_zone }}"
-
-#     - name: Derive AWS region from AZ
-#       ansible.builtin.set_fact:
-#         aws_region: "{{ availability_zone[:-1] }}"  # Removes last character (e.g., "ap-southeast-2a" → "ap-southeast-2")
-
-#     - name: Extract root device name
-#       ansible.builtin.set_fact:
-#         device_name: "{{ instance_info.instances[0].root_device_name }}"
-
-#     - name: Extract current root volume ID
-#       ansible.builtin.set_fact:
-#         old_root_volume_id: "{{ instance_info.instances[0].block_device_mappings | selectattr('device_name', 'equalto', device_name) | map(attribute='ebs.volume_id') | first }}"
+  # ansible.builtin.include_vars: "vars/all.yml"
+  ansible.builtin.include_vars:
+    dir: var
+    extensions: 'yml'
 
 - name: Fetch instance identity document
   ansible.builtin.uri:
@@ -50,6 +27,8 @@
     region: "{{ aws_region }}"
     instance_ids:
       - "{{ instance_id }}"
+    access_key: "{{ aws_access_key | default(omit)}}"
+    secret_key: "{{ aws_secret_key | default(omit)}}"
   register: instance_info
   delegate_to: localhost
 
