--- a/snapshot_cleanup/tasks/snapshot_cleanup.yml
+++ b/snapshot_cleanup/tasks/snapshot_cleanup.yml
@@ -37,7 +37,6 @@
   ansible.builtin.assert:
     that: 
       - old_snapshots | length > 0
-    fail_msg: "Old Snapshots do not exist"
     success_msg: "Old Snapshots exist. Proceeding to check them out"
 
 - name: Determine the latest snapshot overall
@@ -48,6 +47,7 @@
         | sort(attribute='start_time', reverse=False)
         | last
       }}
+  when: old_snapshots | length > 0
 
 - name: Determine newest snapshot among old snapshots
   ansible.builtin.set_fact:
@@ -59,6 +59,7 @@
         if (old_snapshots | length) > 0
         else None
       }}
+  when: old_snapshots | length > 0
 
 - name: Build the list of snapshots to remove
   ansible.builtin.set_fact:
@@ -69,6 +70,7 @@
         | map(attribute='snapshot_id')
         | list
       }}
+  when: old_snapshots | length > 0
 
 - name: Debug info
   ansible.builtin.debug:
@@ -78,7 +80,8 @@
       - "Latest overall snapshot: {{ latest_snapshot.snapshot_id if latest_snapshot else 'None' }}"
       - "Newest old snapshot: {{ newest_old_snapshot.snapshot_id if newest_old_snapshot else 'None' }}"
       - "Removing: {{ remove_list }}"
-
+  when: old_snapshots | length > 0
+  
 - name: Delete old snapshots
   amazon.aws.ec2_snapshot:
     region: "{{ region }}"
