--- a/snapshot_cleanup/tasks/snapshot_cleanup.yml
+++ b/snapshot_cleanup/tasks/snapshot_cleanup.yml
@@ -84,6 +84,6 @@
     access_key: "{{ assumed_role.sts_creds.access_key }}"
     secret_key: "{{ assumed_role.sts_creds.secret_key }}"
     session_token: "{{ assumed_role.sts_creds.session_token }}"
-  loop: "{{ remove_list }}"
-  when: remove_list | length > 0
+  loop: "{{ remove_list | default([]) }}"
+  when: (remove_list | default([])) | length > 0
   delegate_to: localhost
