--- a/server_update/tasks/main.yml
+++ b/server_update/tasks/main.yml
@@ -201,4 +201,4 @@
     secret_key: "{{ assumed_role.sts_creds.secret_key }}"
     session_token: "{{ assumed_role.sts_creds.session_token }}"
   delegate_to: localhost
-  when: cleanup_tags | length > 0
+  when: (cleanup_tags | default([])) | length > 0
