--- a/satellite_register/tasks/main.yml
+++ b/satellite_register/tasks/main.yml
@@ -113,9 +113,10 @@
   
 - name: Assert The Server Can Download the package
   ansible.builtin.assert:
-    that: dnf_download_test is defined
-  fail_msg: "Server cannot download the package"
-  success_msg: "Server can Download The Package. Registration Successful"
+    that: 
+      - dnf_download_test is defined
+    fail_msg: "Server cannot download the package"
+    success_msg: "Server can Download The Package. Registration Successful"
   when: not server_unregister | bool
 
 - name: "Check if host is registered in Satellite"
