Added new roles

--- a/site.yml
+++ b/site.yml
@@ -3,9 +3,15 @@
   hosts: all
   become: true
   roles:
+    - role: server_snapshot
+      tags:
+        - server_snapshot
     - role: server_update
       tags:
         - server_update
+    - role: create_update_tag
+      tags:
+        - create_update_tag
     - role: snapshot_cleanup
       tags:
         - snapshot_cleanup
